Make the "automounted" flag work for FUSE filesystems.

PR:		192852
Submitted by:	taku at tackymt.homeip.net (earlier version)
MFC after:	1 month
Sponsored by:	The FreeBSD Foundation

Former-commit-id: a7a4935c27a9d7aa63c44fb4234ce6ce9a17853c